--- a/css/style.css
+++ b/css/style.css
@@ -27,14 +27,65 @@ body {
 img {
     max-width: 100%;
     height: auto;
+
 }
 
 /* CONTAINER */
 .container {
-    max-width: 1200px;
+    max-width: 1568px;
     width: 100%;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding-left: 64px;
+    padding-right: 64px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.main-content {
+    padding: 64px 0px;
+}
+
+.header {
+    text-align: center;
+    width: 610px;
+    margin: auto;
+}
+
+.main-header {
+    font-size: 64px;
+    line-height: 80px;
+    margin-bottom: 24px;
+    margin-top: 0;
+    color: #252525;
+}
+.main-paragraph {
+    font-size: 26px;
+    line-height: normal;
+    margin-bottom: 24px;
+    color: rgba(37, 37, 37, 0.8);
+}
+.main-link {
+    text-decoration: none;
+    background-color: #252525;
+    color: #fff;
+    padding: 18px 48px;
+    border-radius: 16px;
+    margin-bottom: 64px;
+    display: inline-block;
+    font-size: 18px;
+}
+.image-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.image-list-item {
+    width: 316px;
+    height: 288px;
+    border-radius: 16px;
+    margin-bottom: 16px;
+}
+
+.image-list-item:not(:nth-child(4n)) {
+    margin-right: 16px;
 }
